--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,11 @@
 plugins {
-    id 'java'
+    id 'java-library'
     id 'com.github.johnrengelman.shadow' version '6.1.0'
+    id 'maven-publish'
 }
 
-group 'me.fisher2911'
-version '1.0.1'
+group 'io.github.Fisher2911'
+version '1.0.0'
 
 repositories {
     mavenCentral()
@@ -20,10 +21,10 @@ repositories {
 
 dependencies {
     compileOnly 'org.spigotmc:spigot-api:1.17-R0.1-SNAPSHOT'
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.0'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
     compileOnly 'org.jetbrains:annotations:22.0.0'
-    implementation 'net.kyori:adventure-api:4.9.0'
+    implementation 'net.kyori:adventure-api:4.9.2'
     implementation 'co.aikar:taskchain-bukkit:3.7.2'
     implementation "net.kyori:adventure-text-minimessage:4.2.0-SNAPSHOT"
     implementation "net.kyori:adventure-platform-bukkit:4.0.0"
