--- a/build.gradle
+++ b/build.gradle
@@ -26,17 +26,14 @@ plugins {
     id 'java-library'
     id 'maven-publish'
     id 'signing'
-    id 'com.github.johnrengelman.shadow' version '6.1.0'
+    id 'io.github.gradle-nexus.publish-plugin' version '1.1.0'
 }
 
 group = 'io.github.fisher2911'
 archivesBaseName = "FishCore"
 version = "1.0.0"
 
-java {
-    withJavadocJar()
-    withSourcesJar()
-}
+
 
 repositories {
     mavenCentral()
@@ -55,32 +52,28 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
     compileOnly 'org.jetbrains:annotations:22.0.0'
-    implementation 'net.kyori:adventure-api:4.9.2'
-    implementation 'co.aikar:taskchain-bukkit:3.7.2'
-    implementation "net.kyori:adventure-text-minimessage:4.2.0-SNAPSHOT"
-    implementation "net.kyori:adventure-platform-bukkit:4.0.0"
+    compileOnly 'net.kyori:adventure-api:4.9.2'
+    compileOnly 'co.aikar:taskchain-bukkit:3.7.2'
+    compileOnly 'net.kyori:adventure-text-minimessage:4.2.0-SNAPSHOT'
+    compileOnly 'net.kyori:adventure-platform-bukkit:4.0.0'
 }
 
-test {
-    useJUnitPlatform()
+java {
+    withJavadocJar()
+    withSourcesJar()
 }
-
-shadowJar {
-    relocate 'co.aikar.taskchain', 'io.github.fisher2911.hmcutils.taskchain'
-}
-
-//shadowJar {
-//    archiveBaseName.set('FishCore')
-//    archiveClassifier.set('')
-//    archiveVersion.set('')
-//}
-
 
 publishing {
     publications {
+
         mavenJava(MavenPublication) {
-            artifactId = 'FishCore'
+
+            groupId 'io.github.fisher2911'
+            artifactId 'fish-core'
+            version project.version
+
             from components.java
+
             versionMapping {
                 usage('java-api') {
                     fromResolutionOf('runtimeClasspath')
@@ -89,36 +82,48 @@ publishing {
                     fromResolutionResult()
                 }
             }
+
             pom {
-                name = 'Fish Core'
+                name = 'FishCore'
+
                 description = 'A Spigot plugin core'
+
                 url = 'https://github.com/fisher2911/FishCore'
+
+                packaging = 'jar'
+
                 licenses {
                     license {
                         name = 'MIT License'
-                        url = 'https://github.com/Fisher2911/FishCore/blob/master/LICENSE.txt'
+                        url = 'https://opensource.org/licenses/MIT'
                     }
                 }
+
                 developers {
                     developer {
-                        id = 'Fisher2911'
-                        name = 'Fisher'
-                        email = 'fisher1205l@gmail.com'
+                        id = 'fisher2911'
                     }
                 }
                 scm {
-                    connection = 'https://github.com/fisher2911/FishCore'
-                    developerConnection = 'https://github.com/fisher2911/FishCore'
+                    connection = 'scm:git:git://github.com/fisher2911/FishCore.git'
+                    developerConnection = 'scm:git:ssh://github.com:fisher2911/FishCore.git'
                     url = 'https://github.com/fisher2911/FishCore'
                 }
             }
         }
     }
 
-    repositories {
-        maven {
-            def releasesRepoUrl = layout.buildDirectory.dir('/libs/releases')
-            url = version.endsWith('SNAPSHOT') ? snapshotsRepoUrl : releasesRepoUrl
+    nexusPublishing {
+        repositories
+        repositories {
+            sonatype {  //only for users registered in Sonatype after 24 Feb 2021
+                nexusUrl.set(uri("https://s01.oss.sonatype.org/service/local/"))
+                snapshotRepositoryUrl.set(uri("https://s01.oss.sonatype.org/content/repositories/snapshots/"))
+                username = sonatypeUsername
+                password = sonatypePassword
+            }
         }
     }
 }
+
+signing.sign publishing.publications.mavenJava
