--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,7 @@ version = "1.0.0"
 
 repositories {
     mavenCentral()
+    mavenLocal()
     maven { url = 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/' }
     maven { url "https://papermc.io/repo/repository/maven-public/" }
     maven { url = 'https://repo.aikar.co/content/groups/aikar/' }
@@ -48,7 +49,7 @@ repositories {
 }
 
 dependencies {
-    compileOnly 'org.spigotmc:spigot-api:1.17-R0.1-SNAPSHOT'
+    compileOnly 'org.spigotmc:spigot:1.16.5-R0.1-SNAPSHOT'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
     compileOnly 'org.jetbrains:annotations:22.0.0'
