--- a/build.gradle
+++ b/build.gradle
@@ -31,7 +31,7 @@ plugins {
 
 group = 'io.github.fisher2911'
 archivesBaseName = "FishCore"
-version = "1.0.0"
+version = "0.0.2"
 
 
 
@@ -53,10 +53,10 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
     compileOnly 'org.jetbrains:annotations:22.0.0'
-    compileOnly 'net.kyori:adventure-api:4.9.2'
-    compileOnly 'co.aikar:taskchain-bukkit:3.7.2'
-    compileOnly 'net.kyori:adventure-text-minimessage:4.2.0-SNAPSHOT'
-    compileOnly 'net.kyori:adventure-platform-bukkit:4.0.0'
+    api 'co.aikar:taskchain-bukkit:3.7.2'
+    api 'net.kyori:adventure-api:4.9.2'
+    api 'net.kyori:adventure-text-minimessage:4.2.0-SNAPSHOT'
+    api 'net.kyori:adventure-platform-bukkit:4.0.0'
 }
 
 java {
