--- a/build.gradle
+++ b/build.gradle
@@ -31,7 +31,7 @@ plugins {
 
 group = 'io.github.fisher2911'
 archivesBaseName = "FishCore"
-version = "0.2.4-SNAPSHOT"
+version = "0.2.5-SNAPSHOT"
 
 
 
@@ -58,6 +58,7 @@ dependencies {
     api 'net.kyori:adventure-text-minimessage:4.2.0-SNAPSHOT'
     api 'net.kyori:adventure-platform-bukkit:4.0.0'
     api 'net.kyori:adventure-text-serializer-legacy:4.9.1'
+    api 'org.spongepowered:configurate-yaml:4.1.2'
 }
 
 java {
